# SpaceInvaders

./: .travis.yml  A deeper dive into the methodology used in Space Invaders.txt  CMakeLists.txt  Game.cpp  Game.h  Level.h  README.md  Stopwatch.cpp  Stopwatch.h  Transformation.cpp  Transformation.h  generateDoxygenDocumentation.sh  levelTest.xml  main.cpp  resources.h  run.sh
Entities/: Bullet.cpp  Bullet.h  CollideObject.cpp  CollideObject.h  Counter.cpp  Counter.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  HelperDatatypes.cpp  HelperDatatypes.h  Immortal.cpp  Immortal.h  Mortal.cpp  Mortal.h  Player.cpp  Player.h  Shield.cpp  Shield.h
Entity/: Bullet.cpp  Bullet.h  CollideObject.cpp  CollideObject.h  Counter.cpp  Counter.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  HelperDatatypes.cpp  HelperDatatypes.h  Immortal.cpp  Immortal.h  Mortal.cpp  Mortal.h  MoveObject.cpp  MoveObject.h  Player.cpp  Player.h  Shield.cpp  Shield.h
MVC/: Controller.cpp  Controller.h  Level.cpp  Level.h  Model.cpp  Model.h  View.cpp  View.h
Parser/: Parser.cpp  Parser.h  tinystr.cpp  tinystr.h  tinyxml.cpp  tinyxml.h  tinyxmlparser.cpp
Singleton/: Stopwatch.cpp  Stopwatch.h  Transformation.cpp  Transformation.h
html/: _bullet_8h_source.html  _collide_object_8h_source.html  _controller_8h_source.html  _counter_8h_source.html  _enemy_8h_source.html  _entity_8h_source.html  _game_8h_source.html  _helper_datatypes_8h_source.html  _immortal_8h_source.html  _level_8h_source.html  _model_8h_source.html  _mortal_8h_source.html  _move_object_8h_source.html  _parser_8h_source.html  _player_8h_source.html  _shield_8h_source.html  _stopwatch_8h_source.html  _transformation_8h_source.html  _view_8h_source.html  annotated.html  class_ti_xml_attribute-members.html  class_ti_xml_attribute.html  class_ti_xml_attribute_set-members.html  class_ti_xml_attribute_set.html  class_ti_xml_base-members.html  class_ti_xml_base.html  class_ti_xml_comment-members.html  class_ti_xml_comment.html  class_ti_xml_declaration-members.html  class_ti_xml_declaration.html  class_ti_xml_document-members.html  class_ti_xml_document.html  class_ti_xml_element-members.html  class_ti_xml_element.html  class_ti_xml_handle-members.html  class_ti_xml_handle.html  class_ti_xml_node-members.html  class_ti_xml_node.html  class_ti_xml_out_stream-members.html  class_ti_xml_out_stream.html  (+132 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_2.js  (+27 more)
resources/levels/: battleOfThermopylae.xml  classic.xml  levelTest.xml  mexicanStandoff.xml
